--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"dotenv": "^16.0.3",
 		"postcss": "^8.4.23",
 		"postcss-cli": "^10.1.0",
+		"swiper": "^9.3.2",
 		"tailwindcss": "^3.3.2"
 	},
 	"devDependencies": {
