--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"@11ty/eleventy": "^2.0.1-beta.1",
 		"@11ty/eleventy-plugin-vite": "^4.0.0",
+		"@alpinejs/collapse": "^3.12.1",
 		"@tailwindcss/aspect-ratio": "^0.4.2",
 		"@tailwindcss/forms": "^0.5.3",
 		"@tailwindcss/typography": "^0.5.9",
